--- a/museum-of-candy/app.css
+++ b/museum-of-candy/app.css
@@ -21,3 +21,18 @@ body {
   font-size: 1.5rem;
 }
 
+#headingGroup span {
+  color: #EA1C2C;
+}
+
+#headingGroup h1 {
+  font-weight: 100;
+  font-size: 3rem;
+}
+
+@media (max-width: 768px) {
+  #headingGroup h1 {
+    font-weight: 100;
+    font-size: 2.5rem;
+  }
+}
