--- a/museum-of-candy/app.css
+++ b/museum-of-candy/app.css
@@ -3,6 +3,19 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
+.blurb h2 {
+  color: #EA1C2C;
+  font-weight: 100;
+  font-size: 2.5rem;
+}
+
+.blurb p {
+  color: #F498B8;
+  font-weight: 100;
+  font-size: 1.125rem;
+  line-height: 2;
+}
+
 #mainNavbar {
   font-weight: 100; /*lighter*/
 }
