--- a/museum-of-candy/app.css
+++ b/museum-of-candy/app.css
@@ -4,13 +4,13 @@ body {
 }
 
 .blurb h2 {
-  color: #EA1C2C;
+  color: #ea1c2c;
   font-weight: 100;
   font-size: 2.5rem;
 }
 
 .blurb p {
-  color: #F498B8;
+  color: #f498b8;
   font-weight: 100;
   font-size: 1.125rem;
   line-height: 2;
@@ -26,16 +26,16 @@ body {
 }
 
 #mainNavbar .nav-link:hover {
-  color: #EA1C2C;
+  color: #ea1c2c;
 }
 
-#mainNavbar .navbar-brand{
-  color: #EA1C2C;
+#mainNavbar .navbar-brand {
+  color: #ea1c2c;
   font-size: 1.5rem;
 }
 
 #headingGroup span {
-  color: #EA1C2C;
+  color: #ea1c2c;
 }
 
 #headingGroup h1 {
@@ -43,9 +43,22 @@ body {
   font-size: 3rem;
 }
 
-@media (max-width: 768px) {
+.content {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.navbar.scrolled {
+  background: rgb(222, 192, 222);
+  transition: background 500ms;
+}
+
+@media (max-width: 1200px) {
   #headingGroup h1 {
     font-weight: 100;
     font-size: 2.5rem;
+  }
+  .blurb h2 {
+    font-size: 2rem;
   }
 }
